--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,6 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: #06365f;
+    }
