--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -88,7 +88,8 @@ body {
 
 .button-text{
   color: silver;
-
+  float: right;
+  margin-bottom: 50px;
   text-decoration: none;
   font-weight:bold;
   font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
