--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,184 @@
+/* 
+html5doctor.com Reset Stylesheet
+v1.6.1
+Last Updated: 2010-09-17
+Author: Richard Clark - http://richclarkdesign.com 
+Twitter: @rich_clark
+*/
+
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+body {
+    line-height: 1;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+nav ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+a {
+    margin: 0;
+    padding: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+
+/* change colours to suit your needs */
+
+ins {
+    background-color: #ff9;
+    color: #000;
+    text-decoration: none;
+}
+
+
+/* change colours to suit your needs */
+
+mark {
+    background-color: #ff9;
+    color: #000;
+    font-style: italic;
+    font-weight: bold;
+}
+
+del {
+    text-decoration: line-through;
+}
+
+abbr[title],
+dfn[title] {
+    border-bottom: 1px dotted;
+    cursor: help;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+/* change border colour to suit your needs */
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #cccccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+input,
+select {
+    vertical-align: middle;
+}
+
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -5,6 +186,102 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+}
+
+.bar {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    background-image: url(../images/bgtile.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.container {
+    width: 60%;
+    margin: 0 auto;
+    margin-top: 250px;
+}
+
+.title {
+    display: inline-block;
+}
+
+.box h2 {
+    color: #06365f;
+    font-size: 23px;
+}
+
+.box {
+    background-image: url(../images/frame.png);
+    background-repeat: no-repeat;
+    float: left;
+}
+
+.title2 {
+    width: 300px;
+    margin-left: 40px;
+    margin-top: 40px;
+    background-color:white;
+    border-radious:0.5em;
+}
+
+.phones {
+    width: 400px;
+    height: 400px;
+    display: inline-block;
+    float: left;
+}
+
+.text1 {
+    width:420px;
+    padding: 30px;
+    background-color:white;
+    margin-left: 10px;
+
+}
+
+.text1 p{
+    margin-bottom:20px;
+}
+
+.apple{
+    margin-right:15px;
+    float:left;
+}
+
+.footer {
+    list-decoration:none;
+    font-weigth:400;
+}
+
+.list{
+    display:inline-block;
+    font-size:12px;
+
+}
+
+.list li{
+    float:left;
+    list-style: none;
+    text-transform: uppercase;
+    margin: 0 10px;
+    position:relative;
+    left:-200px;
+
+}
+
+a{
+text-decoration:none;
+color:#1c5380;
+
+}
+
+.copy a{
+    float:left;
+    color:grey; 
+
 }
