--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,105 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+    font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    margin: 0;
+    background-image: url(../images/bgtile.png);
+    background-repeat: repeat-x;
+}
+
+.container {
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    /* align-items: flex-start; */
+    /* align-content: center; */
+}
+
+/* @media (min-width: 768px) {
+    .container {
+        width: 60%;
+    }
+} */
+
+.brand {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    position: relative;
+}
+.ig-logo {
+    height: 60px;
+    margin-right: 20px;
+}
+.home-icon {
+    margin-right: 10px;
+}
+.home-button {
+    display: flex;
+    align-items: center;
+    /* border: 1px solid #06365f; */
+    border-radius: 8px;
+    vertical-align: center;
+    /* background-image: url(../images/frame.png); */
+    background-color: #06365f;
+    background-size: cover;
+    /* background-position:  */
+    padding: 10px 10px;
+    font-size: 1em;
+    font-weight: 600;
+    color: #fff
+}
+.phone {
+    margin-right: 80px;
+}
+.content {
+  max-width: 35%;
+}
+.content-text {
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+    padding: 40px;
+}
+h1 {
+  max-width: 80%;
+    color: #06365f;
+    margin-bottom: 20px;
+}
+
+.content-text p {
+  margin-bottom: 10px;
+}
+
+.app-logos {
+  margin-top: 40px;
+}
+.iphone {
+  margin-right: 20px;
+}
+.footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+  font-weight: 600;
+}
+.footer a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #1c5380;
+}
+.footer p {
+  color: #777777
+}
+
+.exp {
+  object-fit: cover;
+
 }
