--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,102 @@
 /*
 Colors to use:
 dark blue: #06365f
-light blue: #1c5380
+light blue: #497498
 */
-
+* {
+  box-sizing: border-box;
+}
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(to bottom, #497498, #497498 40%, #fff 40%);
+  background-repeat: no-repeat;
+  background-attachment: local;
+}
+
+.main {
+  margin: 9rem 9rem 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 2;
+  grid-template-areas:
+    'aside aside section section'
+    'footer footer footer footer';
+}
+
+.aside {
+  grid-area: aside;
+  display: flex;
+  justify-content: center;
+}
+.aside-img {
+  height: 30rem;
+}
+
+.section {
+  min-width: 100%;
+  grid-area: section;
+}
+.top-content {
+  display: flex;
+  justify-content: flex-end;
+}
+.top-content .login {
+  border: 0;
+  background: linear-gradient(#497498 50%, #06365f 99%);
+  padding: 0.3rem 1rem;
+  border: 1px #06365f solid;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  align-self: center;
+  margin-right: 3.8rem;
+  margin-left: auto;
+  font-weight: 700;
+}
+.top-content .top-img {
+  margin-right: 0.3rem;
+}
+
+.container {
+  background: url(../images/frame.png) no-repeat;
+  background-size: contain;
+  max-width: max-content;
+}
+.content {
+  border-radius: 5px;
+  padding: 1rem;
+  max-width: 34rem;
+  margin: 1rem;
+}
+.content .title {
+  color: #06365f;
+}
+.badge-img {
+  margin-top: 1.5rem;
+  margin-right: 1rem;
+}
+.disabled {
+  color: #999;
+}
+.footer {
+  grid-area: footer;
+  display: flex;
+  justify-content: center;
+}
+.footer-content a {
+  color: #497498;
+  text-decoration: none;
+}
+.footer-content li {
+  font-weight: 600;
+
+  display: inline-block;
+  padding: 1rem;
+  list-style: none;
 }
