--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -14,9 +14,10 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, #497498, #497498 40%, #fff 40%);
+  background: linear-gradient(to bottom, #497498, #497498 45%, #fff 45%);
   background-repeat: no-repeat;
   background-attachment: local;
+  overflow: hidden;
 }
 
 .main {
@@ -33,6 +34,7 @@ body {
   grid-area: aside;
   display: flex;
   justify-content: center;
+  margin-left: 4rem;
 }
 .aside-img {
   height: 30rem;
@@ -48,7 +50,7 @@ body {
 }
 .top-content .login {
   border: 0;
-  background: linear-gradient(#497498 50%, #06365f 99%);
+  background: linear-gradient(#6d9bc2 3%, #497498 99%);
   padding: 0.3rem 1rem;
   border: 1px #06365f solid;
   color: #fff;
@@ -99,4 +101,17 @@ body {
   display: inline-block;
   padding: 1rem;
   list-style: none;
+}
+@media (max-width: 1000px) {
+  .main {
+    grid-template-rows: 3;
+    grid-template-areas:
+      'aside aside aside aside'
+      'section section section section'
+      'footer footer footer footer';
+  }
+
+  .aside-img {
+    display: none;
+  }
 }
