--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,88 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+}
+
+.dark-blue {
+  color: #06365f;
+}
+
+.light-blue {
+  color: #1c5380;
+}
+
+.container {
+  width: 1000px;
+  margin: 0 auto;
+  padding: 30px 0px;
+}
+
+.col {
+  float: left;
+}
+
+.col-2 {
+  width: 45%;
+}
+
+.col-middle {
+  margin: 0 5%;
+}
+
+.clearfix {
+  clear: both;
+}
+
+#main{
+  margin-top: 50px;
+}
+
+.main-img {
+  text-align: center;
+}
+
+.img-brand {
+  margin-right: 20px;
+  vertical-align: middle;
+}
+
+.button-login {
+  /*margin-left: 10vw;*/
+  padding: 7px 12px;
+  vertical-align: middle;
+  background-color: #1c5380;
+  color: white;
+  box-shadow: 1px 1px 8px 0 grey;
+  border: 1px solid grey;
+  border-radius: 8px;
+  float: right;
+}
+
+.info-box {
+  background: white;
+  margin: 30px 0;
+  padding: 10px 30px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px 0 #eee;
+  border: 2px solid #eee;
+}
+
+.info-iphone {
+  margin-right: 20px;
+}
+
+#footer {
+  text-align: center;
+}
+
+.footer-ul {
+  list-style-type: none;
+}
+
+.footer-li {
+  display: inline;
+  margin: 0 5px;
 }
