--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,116 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+}
+
+header {
+  height: 335px;
+  background-image: linear-gradient(#4b7294,#1c5380);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+#div__img__phones {
+  margin-left: 9%;
+  margin-top: 8%;
+  width: 30%;
+  position: absolute;
+}
+
+#div__img__ig {
+  width: 29%;
+  margin-left: 44%;
+  margin-top: 10%;
+  position: absolute;
+}
+
+#logIn__button {
+  height: 50px;
+  width: 110px;
+  border: 0.5px rgb(77, 73, 73) solid;
+  background-image: linear-gradient(#6b98be, #4b7294);
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  cursor: pointer;
+  float: right;
+  margin-top: 11%;
+  margin-right: 12%;
+  border-radius: 5%;
+  text-align: center;
+  padding: 15px 0px 0px 0px;
+  position: relative; 
+}
+
+#div__img__home {
+  width: 25%;
+  float: left;
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
+
+#div__p {
+  width: 570px;
+  height: 500px;
+  margin-left: 560px;
+  background-image: url(/images/frame.png) ;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  margin-top: -85px;
+  padding: 0;
+  border: none;
+}
+
+h2 {
+  color: #06365f;
+  font-size: 30px;
+  margin-left: 40px;
+  padding-top: 30px;
+  margin-right: 200px;
+}
+
+p {
+  font-size: 19px;
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-right: 60px;
+  font-weight: 300;
+}
+
+#img__apple {
+  margin-top: 20px;
+  margin-left: 40px;
+  width: 33%;
+}
+
+#img__google {
+  margin-left: 10px;
+  width: 30%;
+}
+
+#list {
+  color: #1c5380;
+  font-size: 14px;
+  margin-bottom: 50px;
+  margin-top: 30px;
+  margin-left: 300px;
+}
+
+li {
+  display: inline;
+  text-transform: uppercase;
+  padding-right: 20px;
+}
+
+#copy {
+  color: grey;
 }
