--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,14 +8,15 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
-
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
 
 #mainSection {
   width: 70%;
   height: auto;
   margin: 10% 15%;
-  
+  margin-top:-60px;
 }
 
 #mainImage {
@@ -31,29 +32,40 @@ body {
 
 
 #plainInfoText {
+  background-color: white;
+  text-align: justify;
+  padding-left: 25px; 
+  padding-right: 25px;
+  box-shadow: 10px 10px 5px grey;
+}
+#button {
+  background-color: #1c5380;
+  width: 15%;
+  text-align: center;
+  color:white;
+  float: right;
   
 }
-/* #phone {
-  padding-top:130px;
-  padding-left: 90px;
-  display:block;
-  float:left;
-
-}
-#text{
-  margin: 0;
-   padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align:baseline;
-}
-#logo{
-  display: block
-}
-#iphone{
-  display: block
+#stores {
+  float: left;
 }
 
-#playstore{
-  display: block
-} */
+#footer {
+  margin-inline-end: 35vw;
+  margin-block-end: 10px;
+}
+
+footer {
+width: 90%;
+text-align: center;
+margin-block-end: 10px;
+position: absolute;
+margin-top: 600px;
+
+}
+li {
+  display: inline;
+  margin-left: 15px;
+  margin-bottom: auto;
+}
+
